--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,12 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
-		<frontend-src-dir>${project.basedir}/src/main/app/LMS-FRONTEND</frontend-src-dir>
+		<frontend-src-dir>${project.basedir}/src/main/app/lms-frontend</frontend-src-dir>
 		<node.version>v18.0.0</node.version>
 		<yarn.version>v1.16.0</yarn.version>
 		<frontend-maven-plugin.version>1.11.0</frontend-maven-plugin.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -50,7 +51,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.32</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -126,7 +132,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.0.1</version>
+
 				<executions>
 					<execution>
 						<id>position-react-build</id>
