--- a/src/main/app/lms-frontend/package.json
+++ b/src/main/app/lms-frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.16.8",
     "@mui/x-data-grid": "^7.11.1",
@@ -20,6 +21,7 @@
     "react-bootstrap": "^2.10.6",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-tabulator": "^0.21.0",
