--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,11 @@ spring.data.redis.timeout=600ms
 spring.web.cors.allow-credentials=true
 spring.web.cors.allowed-origins=*
 
+spring.mail.host=smtp.example.com
+spring.mail.port=587
+spring.mail.username=your-email@example.com
+spring.mail.password=your-email-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
