--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 			<version>2.7.11</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
